# qemu_scripts

./: Makefile.am  README  configure.ac  qnet_down  qnet_getip  qnet_up  qrun_cmd  qstart_vm
examples/: CONFIG.gui  CONFIG.multiple_shared_folders  CONFIG.shared_folder  CONFIG.tumbleweed  Makefile.am  cmds.txt  host.sudo
